<resources>
    <string name="app_name">CarService</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="hint_first_name">First name</string>
    <string name="hint_last_name">Last name</string>
    <string name="hint_email_address">Email address</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm password</string>
    <string name="create_account">Create account</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="sign_in">Sign in</string>
    <string name="car_service">Car Service</string>
    <string name="your_road_assistance_partner">Your Road Assistance Partner</string>
    <string name="sign_up_now">Sign up now</string>
    <string name="username">Username</string>
    <string name="email_address">Email address</string>
    <string name="phone">Phone</string>
    <string name="i_accept_all_the_terms_and_conditions">I accept all the terms and conditions</string>
    <string name="remember_me">Remember me</string>
    <string name="fill_the_form_to_create_an_account">Fill the form to create an account</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_in_to_continue_using_our_app">Sign in to continue using our app</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="sign_up">Sign up</string>
    <string name="or_sign_in_with">Or sign in with</string>
    <string name="enter_password_again">Enter password again</string>
    <string name="app_logo">app_logo</string>
</resources>
