<?xml version="1.0" encoding="utf-8"?><!--Modified By Mahmoud Badawy-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingLeft="@dimen/_16sdp"
    android:paddingRight="@dimen/_16sdp"
    tools:context=".activity.RegistrationActivity">


    <!-- App Details_Top Container-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/registration_container_appDetails"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.25"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:contentDescription="@string/app_logo"
            android:id="@+id/registration_img_logo"
            android:layout_width="@dimen/_35sdp"
            android:layout_height="@dimen/_45sdp"
            android:src="@drawable/ic_logo_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3" />

        <TextView
            android:id="@+id/registration_tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/segoe_ui_sb"
            android:text="@string/sign_up_now"
            android:textColor="@color/black"
            android:textSize="@dimen/_24sdp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/registration_img_logo" />

        <TextView
            android:id="@+id/registration_tv_subTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/segoe_ui_sb"
            android:text="@string/fill_the_form_to_create_an_account"
            android:textColor="@color/grey"
            android:textSize="@dimen/_13sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/registration_tv_title" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <!-- Registration form_middle Container-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/registration_container_form"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_5sdp"
        app:layout_constraintBottom_toTopOf="@id/registration_container_bottom"
        app:layout_constraintHeight_percent="0.45"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registration_container_appDetails">

        <!-- Created the form in another layout file item_registration_form_form.xml -->
        <include
            layout="@layout/item_registration_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <!-- Buttons_Bottom Container-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/registration_container_bottom"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">


        <CheckBox
            android:id="@+id/registration_cb_termsCheck"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="0dp"
            android:background="?android:attr/listChoiceIndicatorMultiple"
            android:button="@null"
            android:layout_marginTop="@dimen/_10sdp"
            app:layout_constraintHorizontal_bias="0.7"
            app:layout_constraintHeight_percent="0.15"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toLeftOf="@id/registration_tv_terms"
            />

        <TextView
            android:id="@+id/registration_tv_terms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/segoe_ui_regular"
            android:text="@string/i_accept_all_the_terms_and_conditions"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintBottom_toBottomOf="@id/registration_cb_termsCheck"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/registration_cb_termsCheck"
            app:layout_constraintHorizontal_bias="0.6"/>


        <Button
            android:id="@+id/registration_btn_createAccount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/style_btn_create_account"
            android:fontFamily="@font/segoe_ui_regular"
            android:paddingTop="@dimen/_6sdp"
            android:paddingBottom="@dimen/_6sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:text="@string/create_account"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_16sdp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/registration_cb_termsCheck" />


        <TextView
            android:id="@+id/registration_tv_alreadyHaveAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/segoe_ui_regular"
            android:text="@string/already_have_an_account"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/registration_btn_createAccount"
            app:layout_constraintHorizontal_bias="0.3"/>

        <TextView
            android:id="@+id/registration_tv_signIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/segoe_ui_regular"
            android:onClick="showLoginActivity"
            android:text="@string/sign_in"
            android:textColor="@color/red"
            android:textSize="@dimen/_14sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/registration_tv_alreadyHaveAccount"
            app:layout_constraintTop_toBottomOf="@id/registration_btn_createAccount" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/red"
            app:layout_constraintLeft_toLeftOf="@id/registration_tv_signIn"
            app:layout_constraintRight_toRightOf="@id/registration_tv_signIn"
            app:layout_constraintTop_toBottomOf="@id/registration_tv_signIn" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>